Added update and delete functionality
