# controllers/bugs.js
@@ -10,8 +10,8 @@ const getAll = async (req, res) => {
 };
   
   const getSingle = async (req, res) => {
-    const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db().collection('bugs').find({ _id: userId });
+    const bugId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db().collection('bugs').find({ _id: bugId });
     result.toArray().then((lists) => {
       res.setHeader('Content-Type', 'application/json');
       res.status(200).json(lists[0]);
@@ -37,8 +37,45 @@ const createBug = async (req, res) => {
     }
   };
 
+const updateBug = async (req, res) => {
+  const bugId = new ObjectId(req.params.id);
+  const bug = {
+    bugTitle: req.body.bugTitle,
+    dateDiscovered: req.body.dateDiscovered,
+    environment: req.body.environment,
+    stepsToReproduce: req.body.stepsToReproduce,
+    expectedResult: req.body.expectedResult,
+    actualResult: req.body.actualResult,
+    severity: req.body.severity
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection('bugs')
+    .replaceOne({ _id: bugId }, bug);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+  }
+};
+
+const deleteBug = async (req, res) => {
+  const bugId = new ObjectId(req.params.id);
+  const response = await mongodb.getDb().db().collection('bugs').deleteOne({ _id: bugId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(200).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+  }
+};
+
 module.exports = {
     getAll,
     getSingle,
-    createBug
+    createBug,
+    updateBug,
+    deleteBug
 }
